# Windman

./: .gitignore  .versionrc.json  Cargo.toml  README.md  Taskfile.yml  commitlint.config.js  package.json
.github/workflows/: ci.yml  release.yml
src/: cli.rs  config.rs  desktop.rs  download.rs  install.rs  main.rs  paths.rs  prune.rs  remote.rs  util.rs  version.rs
